--- a/index.html
+++ b/index.html
@@ -6,7 +6,180 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<header>
+<nav>
+  <a>
+    <img src="img/nerds-logo.png" width="159.87" height="65.02" alt="логотип HTML Academy: Нёрдс">
+  </a>
+<ul>
+<li><a href= "#">Студия</a></li>
+<li><a href= "#">Клиенты</a></li>
+<li><a href= "#">Магазин</a></li>
+<li><a href= "#">Контакты</a></li>
+  </ul>
+<a href="#">Корзина</a>
+</nav>
+<h1>Дизайн-студия Нёрдс</h1>
+<h2>Преимущества</h2>
+<h1>Долго, Дорого, Скурпулезно.</h1>
+<p>Математически выверенный дизайн <br>
+  для вашего сайта или мобильного приложения.</p>
+  <button>Узнать больше</button>
+ <p> <img src="img/nerds-index-slide1 1.png" width="760" height="431" alt="слайд картинка"></p>
+ </header> 
+
+ <main>
+   <h2>Услуги</h2>
+<section>
+  <figure>
+    <img src="img/illustration-1 1.png" width="300" height="146" alt="картинка сайта на устройстве">
+        </figure>
+  <h2>Веб-сайты</h2>
+ <p> Мир никогда не будет прежним <br>
+  после того как увидит ваш сайт!</p>
+    <button type="button">Заказать</button>
+</section>
+
+<section>
+  <figure>
+    <img src="img/illustration-2 1.png" width="300" height="146" alt="картинка смартфона с приложениями">
+  </figure>
+  <h2>Приложения</h2>
+ <p> Покорите топ-10 приложений <br>
+  в AppStore и Google Play</p>
+  <button type="button">Заказать</button>
+</section>
+
+<section>
+  <figure>
+    <img src="img/illustration-3 1.png" width="300" height="146" alt="картинка с презентацией">
+  </figure>
+  <h2>Презентации</h2>
+ <p>
+  Вы даже не подозреваете,<br>
+  насколько вы изумительны!</p>
+  <button type="button">Заказать</button>
+
+  <section>
+    <h1>О компании</h1>
+    <h1>Мы — маленькая, но гордая <br>
+      дизайн-студия из Краснодара.</h1>
+      <p> Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br>
+        превыше креатива. Работаем не покладая рук, как роботы.</p>
+<h3>
+  Выполняем заказы на разработку:
+</h3>
+<ul>
+  <li>Веб-сайтов любой сложности</li>
+  <li>Мобильных приложений для IOS и Android</li>
+  <li>Слайдшоу и видео для корпоративных презентаций</li>
+</ul>  
+  </section>
+  <section>
+    <figuru>
+      <img src="img/nerds-illustration 1.png" width="360" height="208">
+      <figcaption>с 2004 года Любим точность во всем:</figcaption>
+    </figuru>
+    <ul>
+      <li>146%</li>
+      <p>
+        Уровень <br>
+        самоотдачи
+      </p>
+    </ul>
+      <ul>
+        <li>100%</li>
+        <p>Соблюдение <br>
+          сроков</p>
+      </ul>
+    <ul>
+      <li>50%</li>
+      <p>Минимальная <br>
+        предоплата</p>
+    </ul>
+  </section>
+
+  <section>
+  <h1>Клиенты</h1>
+  <a>
+    <img src="img/logo_htmlacademy 1.png" width="199" height="57.16" alt="логотип htmlacademy">
+  </a>
+    </section>
+    <section>
+      <a>
+        <img src="img/logo-2 1.png" width="209" height="90" alt="логотип барбершоп "Бородинский">
+      </a>  
+    </section>
+    <section>
+      <a>
+        <img src="img/logo-3 1.png" width="185" height="52" alt="логотип pink">
+      </a>
+      </section>
+    <section>
+      <a>
+        <img src="img/logo-4 1.png" width="173" height="84" alt="логотип mishka">
+      </a>
+    </section>
+    <section>
+      <h2>Напишите нам</h2>
+      <form action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="appointment-name">Ваше имя</label>
+        <input id="appointment-name" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label for="appointment-email">Ваше email:</label>
+        <input id="appointment-email" type="email" name="email" placeholder="email@example.com">
+      </p>
+      <p>
+        <label for="appointment-text">Текст письма</label>
+        <input id="appointment-text" type="text" name="text" placeholder="В свободной форме">
+      </p>
+      <button type="submit">Отправить</button>
+    </form> 
+    </section>
+    
+</main>
+
+<footer>
+  <section>
+    <h1>Контакты</h1>
+    <p>
+      <img src="img/map 1.png" width="1440" height="416" alt="картинка карта">
+    </p>
+    
+      <h2>NЁRDS DESIGN STUDIO</h2>
+      <p>
+        наб. Реки Карповки, <br>
+        5 лит П, Санкт-Петербург
+        <br><br>
+        <a href="tel:+7 800 555-86-28">+7 800 555-86-28</a>
+      </p>
+      <a href="#">Напишите нам</a>
+      <p>
+        <img src="img/map-marker 1.png" width="231" height="190" alt="картинка маркер на карте">
+      </p>
+      <section>
+  <section>
+    <ul>
+      <li>
+        <a href="#">Вконтакте</a>
+      </li>
+      <li>
+        <a href="#">Фейсбук</a>
+      </li>
+      <li>
+        <a href="#">Инстаграм</a>
+      </li>
+    </ul>
+  </section>
+  <section>
+  <h1>
+    Давайте дружить, это выгодно!
+  </h1>
+  <p>Скидка 10% для друзей из социальных сетей.</p>
+</section>
+</footer>
 
   </body>
 </html>
