--- a/catalog.html
+++ b/catalog.html
@@ -4,23 +4,22 @@
     <meta charset="utf-8">
     <title>Каталог: Нёрдс</title>
   </head>
+  <body>
   <header>
     <nav>
-          <a>
-              <img src="img/nerds-logo.png" width="159.87" height="65.02" alt="логотип HTML Academy: Нёрдс">
-            </a>
+      <a href="index.html">
+       <img src="https://via.placeholder.com/150x100" alt="">
+      </a>
           <ul>
-          <li><a href= "#">Студия</a></li>
-          <li><a href= "#">Клиенты</a></li>
-          <li><a href= "#">Магазин</a></li>
-          <li><a href= "#">Контакты</a></li>
-            </ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+          </ul>
             <a href="#">Корзина</a>
-          </nav>
+    </nav>
           <h1>Магазин готовых шаблонов</h1>
   </header>
-
-  <body>
   <main>
   <section>
     <h2>Фильтр товаров</h2>
@@ -74,7 +73,6 @@
             <input type="checkbox" name="basket" id="filter-basket">
             <label for="filter-basket">Корзина</label>
           </li>
-
         </ul>
       </fieldset>
       <button type="submit">Показать</button>
@@ -83,62 +81,29 @@
 <section>
   <h2>Сортировать:</h2>
   <ul>
-    <li>По цене</li>
-    <li>По типу</li>
-    <li>По названию</li>
+   <li><a href="#">По цене</a></li>
+   <li><a href="#">По типу</a></li>
+   <li><a href="#">По названию</a></li>
   </ul>
 <ul>
-<h3>Sedona</h3>
-<p>Информационный сайт <br>
-  для туристов</p>
-<p>
-  <img src="img/Shape.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p> 
-<p>
-  <img src="img/img-sedona 1.png" width="359" height="578" alt="картинка сайта седона">
-</p> 
-<p>
-  <img src="img/Rectangle 2.png" width="360" height="231" alt="картинка с информацией о сайте">
-</p>
-<p>
-  <button type="button">9 900 ₽</button>
-</p>
+<li><a href="#">Sedona</a></li>
+<li>Информационный сайт <br>
+  для туристов</li>
+ <li><img src="https://via.placeholder.com/150x100" alt=""></li>
+<li>
+  <a href="#">9 900 ₽</a>
+</li>
+<li><a href="#">Pink</a></li>
+<li><img src="https://via.placeholder.com/150x100" alt=""></li>
+<li><a href="#">Барбершоп"Бородинский"</a></li>
+<li><img src="https://via.placeholder.com/150x100" alt=""></li>
+<li><a href="#">Mishka</a></li>
+<li><img src="https://via.placeholder.com/150x100" alt=""></li>
+<li><a href="#">Aplus</a></li>
+<li><img src="https://via.placeholder.com/150x100" alt=""></li>
+<li><a href="#">Kvast</a></li>
+<li><img src="https://via.placeholder.com/150x100" alt=""></li>
 </ul>
-<h3>Pink</h3>
-<p>
-  <img src="img/browser.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p>
-<p>
-  <img src="img/img-pink 1.png" width="358" height="578" alt="картинка сайта pink">
-</p>
-<h3>Барбершоп"Бородинский"</h3>
-<p>
-  <img src="img/browser.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p>
-<p>
-  <img src="img/img-barbershop 1.png" width="358" height="578" alt="картинка сайта Барбершоп"Бородинский"">
-</p>
-<h3>Mishka</h3>
-<p>
-  <img src="img/browser.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p>
-<p>
-  <img src="img/img-mishka 1.png" width="359" height="578" alt="картинка сайта Mishka">
-</p>
-<h3>Aplus</h3>
-<p>
-  <img src="img/browser.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p>
-<p>
-  <img src="img/img-aplus 1.png" width="359" height="578" alt="картинка сайта Aplus">
-</p>
-<h3>Kvast</h3>
-<p>
-  <img src="img/browser.png" width="360" height="40" alt="картинка верхней панели браузера">
-</p>
-<p>
-  <img src="img/img-kvast 1.png" width="359" height="578" alt="картинка сайта Kvast">
-</p>
 <ul>
   <li>
     <a>1</a>
@@ -157,23 +122,18 @@
   </main>
   <footer>
     <section>
-      <h1>Контакты</h1>
-      <p>
-        <img src="img/map 1.png" width="1440" height="416" alt="картинка карта">
-      </p>
-      
-        <h2>NЁRDS DESIGN STUDIO</h2>
+      <h2>Контакты</h2>
+        <img src="https://via.placeholder.com/150x100" alt="">
+        <h2>nёrds design studio</h2>
         <p>
           наб. Реки Карповки, <br>
           5 лит П, Санкт-Петербург
           <br><br>
-          <a href="tel:+7 800 555-86-28">+7 800 555-86-28</a>
+          <a href="tel:+7800555-86-28">+7 800 555-86-28</a>
         </p>
-        <a href="#">Напишите нам</a>
-        <p>
-          <img src="img/map-marker 1.png" width="231" height="190" alt="картинка маркер на карте">
-        </p>
-        <section>
+        <a href="#">Напишите нам</a><br>
+          <img src="https://via.placeholder.com/150x100" alt="">
+      </section>
     <section>
       <ul>
         <li>
@@ -188,12 +148,11 @@
       </ul>
     </section>
     <section>
-    <h1>
+    <h3>
       Давайте дружить, это выгодно!
-    </h1>
+    </h3>
     <p>Скидка 10% для друзей из социальных сетей.</p>
   </section>
   </footer>
-
 </body>
 </html>
