--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-<header>
+<header> 
 <nav>
-  <a>
-    <img src="img/nerds-logo.png" width="150" height="100" alt="логотип HTML Academy: Нёрдс">
+  <a href="index.html">
+    <img src="https://via.placeholder.com/150x100" alt="">
   </a>
 <ul>
-<li><a href= "#">Студия</a></li>
-<li><a href= "#">Клиенты</a></li>
-<li><a href= "#">Магазин</a></li>
-<li><a href= "#">Контакты</a></li>
+<li><a href="#">Студия</a></li>
+<li><a href="#">Клиенты</a></li>
+<li><a href="catalog.html">Магазин</a></li>
+<li><a href="#">Контакты</a></li>
   </ul>
 <a href="#">Корзина</a>
 </nav>
@@ -24,46 +23,43 @@
 <h1>Долго, Дорого, Скурпулезно.</h1>
 <p>Математически выверенный дизайн <br>
   для вашего сайта или мобильного приложения.</p>
-  <button>Узнать больше</button>
- <p> <img src="https://via.placeholder.com/150x100" alt=""></p>
- </header> 
-
- <main>
+ <a href="#">Узнать больше</a>
+ <p><img src="https://via.placeholder.com/150x100" alt=""></p>
+ </header>
+ <main> 
    <h2>Услуги</h2>
 <section>
-  <figure>
+  <p>
     <img src="https://via.placeholder.com/150x100" alt="">
-        </figure>
+</p>
   <h2>Веб-сайты</h2>
- <p> Мир никогда не будет прежним <br>
+ <p>Мир никогда не будет прежним<br>
   после того как увидит ваш сайт!</p>
-    <button type="button">Заказать</button>
+    <a href="#">Заказать</a>
 </section>
-
 <section>
-  <figure>
+  <p>
     <img src="https://via.placeholder.com/150x100" alt="">
-  </figure>
+</p>
   <h2>Приложения</h2>
- <p> Покорите топ-10 приложений <br>
+ <p>Покорите топ-10 приложений<br>
   в AppStore и Google Play</p>
-  <button type="button">Заказать</button>
+  <a href="#">Заказать</a>
 </section>
-
-  <figure>
+<section>
+  <p>
     <img src="https://via.placeholder.com/150x100" alt="">
-  </figure>
+</p>
   <h2>Презентации</h2>
  <p>
   Вы даже не подозреваете,<br>
   насколько вы изумительны!</p>
-  <button type="button">Заказать</button>
-
+  <a href="#">Заказать</a>
+</section>
   <section>
-    <h1>О компании</h1>
     <h2>Мы — маленькая, но гордая <br>
       дизайн-студия из Краснодара.</h2>
-      <p> Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
         превыше креатива. Работаем не покладая рук, как роботы.</p>
 <h3>
   Выполняем заказы на разработку:
@@ -80,66 +76,58 @@
       <figcaption>с 2004 года Любим точность во всем:</figcaption>
     </figure>
     <ul>
-      <li>146%
+      <li>146<sup>%</sup>
        <p>Уровень <br>
         самоотдачи</p>
       </li>
-      
-    </ul>
-      <ul>
-        <li>100%
+        <li>100<sup>%</sup>
         <p>Соблюдение <br>
           сроков</p></li>
-      </ul>
-    <ul>
-      <li>50%
-     <p> Минимальная <br>
+      <li>50<sup>%</sup>
+     <p>Минимальная<br>
         предоплата</p>
       </li>
     </ul>
   </section>
-
   <section>
   <h2>Клиенты</h2>
-  <a>
+  <ul>
+   <li> 
+  <a href="https://htmlacademy.ru/intensive/htmlcss">
     <img src="https://via.placeholder.com/150x100" alt="">
   </a>
-    </section>
-    <section>
-      <a>
-        <img src="https://via.placeholder.com/150x100" alt="">
+   </li>
+   <li>
+    <a href="#">
+       <img src="https://via.placeholder.com/150x100" alt="">
       </a>  
+   </li>
+   <li>
+      <a href="#">
+        <img src="https://via.placeholder.com/150x100" alt="">
+      </a>
+   </li>
+   <li> 
+      <a href="#">
+        <img src="https://via.placeholder.com/150x100" alt="">
+      </a>
+    </li> 
+    </ul>
     </section>
-    <section>
-      <a>
-        <img src="https://via.placeholder.com/150x100" alt="">
-      </a>
-      </section>
-    <section>
-      <a>
-        <img src="https://via.placeholder.com/150x100" alt="">
-      </a>
-    </section>  
-</main>
-
+  </main>
 <footer>
   <section>
     <h2>Контакты</h2>
-    <p>
       <img src="https://via.placeholder.com/150x100" alt="">
-    </p>
-    
-      <h2>NЁRDS DESIGN STUDIO</h2>
+      <h2>nёrds design studio</h2>
       <p>
         наб. Реки Карповки, <br>
         5 лит П, Санкт-Петербург
         <br><br>
         <a href="tel:+7800555-86-28">+7 800 555-86-28</a>
       </p>
-      <a href="#">Напишите нам</a>
-      <p>
-        <img src="https://via.placeholder.com/150x100" alt="">
-      </p>
+      <a href="#">Напишите нам</a><br>
+        <img src="https://via.placeholder.com/150x100" alt=""> 
     </section>
   <section>
     <ul>
@@ -155,9 +143,9 @@
     </ul>
   </section>
   <section>
-  <h2>
+  <h3>
     Давайте дружить, это выгодно!
-  </h2>
+  </h3>
   <p>Скидка 10% для друзей из социальных сетей.</p>
 </section>
 </footer>
