--- a/catalog.html
+++ b/catalog.html
@@ -5,154 +5,220 @@
     <title>Каталог: Нёрдс</title>
   </head>
   <body>
-  <header>
-    <nav>
-      <a href="index.html">
-       <img src="https://via.placeholder.com/150x100" alt="">
-      </a>
-          <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-          </ul>
-            <a href="#">Корзина</a>
-    </nav>
-          <h1>Магазин готовых шаблонов</h1>
-  </header>
-  <main>
-  <section>
-    <h2>Фильтр товаров</h2>
-    <form method="get" action="https://echo.htmlacademy.ru">
-      <fieldset>
-        <legend>Стоимость:</legend>
-        <p>
-          <label for="appointment-low-price">от</label>
-          <input id="appointment-low-price" type="text" name="name" placeholder="0">
-          <label for="appointment-high-price">до</label>
-          <input id="appointment-high-price" type="text" name="name" placeholder="15000">
-        </p>
-      </fieldset>
-      <fieldset>
-        <legend>Сетка:</legend>
+    <header>
+      <nav>
+        <a href="index.html"><img src="https://via.placeholder.com/150x100" alt=""></a>
         <ul>
           <li>
-            <input type="radio" name="net" value="adaptive" id="filter-adaptive">
-            <label for="filter-adaptive">Адаптивная</label>
+            <a href="#">Студия</a>
           </li>
+
           <li>
-            <input type="radio" name="net" value="fixed" id="filter-fixed" checked>
-            <label for="filter-fixed">Фиксированная</label>
+            <a href="#">Клиенты</a>
           </li>
+
           <li>
-            <input type="radio" name="net" value="rubber" id="filter-rubber">
-            <label for="filter-rubber">Резиновая</label>
+            <a href="#">Магазин</a>
+          </li>
+          
+          <li>
+            <a href="#">Контакты</a>
           </li>
         </ul>
-      </fieldset>
-      <fieldset>
-        <legend>Особенности:</legend>
-        <ul>
-          <li>
-            <input type="checkbox" name="Slider" id="filter-slider" checked>
-            <label for="filter-slider">Слайдер</label>
-          </li>
-          <li>
-            <input type="checkbox" name="block of advantages" id="filter-advantages">
-            <label for="filter-advantages">Блок преимуществ</label>
-          </li>
-          <li>
-            <input type="checkbox" name="news" id="filter-news" checked>
-            <label for="filter-news">Новости</label>
-          </li>
-          <li>
-            <input type="checkbox" name="gallery" id="filter-gallery">
-            <label for="filter-gallery">Галерея</label>
-          </li>
-          <li>
-            <input type="checkbox" name="basket" id="filter-basket">
-            <label for="filter-basket">Корзина</label>
-          </li>
-        </ul>
-      </fieldset>
-      <button type="submit">Показать</button>
-    </form>
-  </section>
-<section>
-  <h2>Сортировать:</h2>
-  <ul>
-   <li><a href="#">По цене</a></li>
-   <li><a href="#">По типу</a></li>
-   <li><a href="#">По названию</a></li>
-  </ul>
-<ul>
-<li><a href="#">Sedona</a></li>
-<li>Информационный сайт <br>
-  для туристов</li>
- <li><img src="https://via.placeholder.com/150x100" alt=""></li>
-<li>
-  <a href="#">9 900 ₽</a>
-</li>
-<li><a href="#">Pink</a></li>
-<li><img src="https://via.placeholder.com/150x100" alt=""></li>
-<li><a href="#">Барбершоп"Бородинский"</a></li>
-<li><img src="https://via.placeholder.com/150x100" alt=""></li>
-<li><a href="#">Mishka</a></li>
-<li><img src="https://via.placeholder.com/150x100" alt=""></li>
-<li><a href="#">Aplus</a></li>
-<li><img src="https://via.placeholder.com/150x100" alt=""></li>
-<li><a href="#">Kvast</a></li>
-<li><img src="https://via.placeholder.com/150x100" alt=""></li>
-</ul>
-<ul>
-  <li>
-    <a>1</a>
-  </li>
-  <li>
-    <a href="#">2</a>
-  </li>
-  <li>
-    <a href="#">3</a>
-  </li>
-  <li>
-    <a href="#">Следующая</a>
-  </li>
-</ul>
-</section>
-  </main>
-  <footer>
-    <section>
-      <h2>Контакты</h2>
-        <img src="https://via.placeholder.com/150x100" alt="">
-        <h2>nёrds design studio</h2>
-        <p>
-          наб. Реки Карповки, <br>
-          5 лит П, Санкт-Петербург
-          <br><br>
-          <a href="tel:+7800555-86-28">+7 800 555-86-28</a>
-        </p>
-        <a href="#">Напишите нам</a><br>
-          <img src="https://via.placeholder.com/150x100" alt="">
+        <a href="#">Корзина</a>
+      </nav>
+      <h1>Магазин готовых шаблонов</h1>
+    </header>
+    <main>
+      <section>
+        <h2>Фильтр товаров</h2>
+        <form method="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend>Стоимость:</legend>
+            <p>
+              <label for="appointment-low-price">от</label>
+              <input id="appointment-low-price" type="text" name="name" placeholder="0">
+              <label for="appointment-high-price">до</label>
+              <input id="appointment-high-price" type="text" name="name" placeholder="15000">
+            </p>
+          </fieldset>
+          <fieldset>
+            <legend>Сетка:</legend>
+            <ul>
+              <li>
+              <input type="radio" name="net" value="adaptive" id="filter-adaptive">
+              <label for="filter-adaptive">Адаптивная</label>
+              </li>
+
+              <li>
+                <input type="radio" name="net" value="fixed" id="filter-fixed" checked>
+                <label for="filter-fixed">Фиксированная</label>
+              </li>
+
+              <li>
+                <input type="radio" name="net" value="rubber" id="filter-rubber">
+                <label for="filter-rubber">Резиновая</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Особенности:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="Slider" id="filter-slider" checked>
+                <label for="filter-slider">Слайдер</label>
+              </li>
+
+              <li>
+                <input type="checkbox" name="block of advantages" id="filter-advantages">
+                <label for="filter-advantages">Блок преимуществ</label>
+              </li>
+
+              <li>
+                <input type="checkbox" name="news" id="filter-news" checked>
+                <label for="filter-news">Новости</label>
+              </li>
+
+              <li>
+                <input type="checkbox" name="gallery" id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
+              </li>
+
+              <li>
+                <input type="checkbox" name="basket" id="filter-basket">
+                <label for="filter-basket">Корзина</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
       </section>
-    <section>
-      <ul>
-        <li>
-          <a href="#">Вконтакте</a>
-        </li>
-        <li>
-          <a href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a href="#">Инстаграм</a>
-        </li>
-      </ul>
-    </section>
-    <section>
-    <h3>
-      Давайте дружить, это выгодно!
-    </h3>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
-  </section>
-  </footer>
-</body>
+      <section>
+        <h2>Сортировать:</h2>
+          <ul>
+            <li>
+              <a href="#">По цене</a>
+            </li>
+
+            <li>
+              <a href="#">По типу</a>
+            </li>
+
+            <li>
+              <a href="#">По названию</a>
+            </li>
+
+            <li>
+              <a href="#">Сортировка от большего к меньшему</a>
+            </li>
+
+            <li>
+              <a href="#">Сортировка от меньшего к большему</a>
+            </li>
+          </ul>
+          <ul>
+            <li><a href="#">Sedona</a>
+              <p>
+                Информационный сайт<br>
+                для туристов
+              </p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+              <p>
+                <a href="#">9 900 ₽</a>
+              </p>
+            </li>
+
+            <li>
+              <a href="#">Pink</a>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="">
+              </p>
+            </li>
+
+            <li>
+              <a href="#">Барбершоп"Бородинский"</a>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="">
+              </p>
+            </li>
+
+            <li>
+              <a href="#">Mishka</a>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="">
+              </p>
+            </li>
+
+            <li>
+              <a href="#">Aplus</a>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="">
+              </p>
+            </li>
+            <li>
+              <a href="#">Kvast</a>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="">
+              </p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a>1</a>
+            </li>
+
+            <li>
+              <a href="#">2</a>
+            </li>
+
+            <li>
+              <a href="#">3</a>
+            </li>
+
+            <li>
+              <a href="#">Следующая</a>
+            </li>
+          </ul>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Контакты</h2>
+        <img src="https://via.placeholder.com/150x100" alt="">
+        <img src="https://via.placeholder.com/150x100" alt="">
+        <p>
+          nёrds design studio
+        </p>
+        <p> 
+          наб. Реки Карповки,<br>
+          5 лит П, Санкт-Петербург
+        </p>
+        <p> 
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
+        </p>
+        <a href="#">Напишите нам</a>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Давайте дружить, это выгодно!</h2>
+        <p>
+          Скидка 10% для друзей из социальных сетей.
+        </p>
+      </section>
+    </footer>
+  </body>
 </html>
