--- a/index.html
+++ b/index.html
@@ -5,149 +5,190 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-<header> 
-<nav>
-  <a href="index.html">
-    <img src="https://via.placeholder.com/150x100" alt="">
-  </a>
-<ul>
-<li><a href="#">Студия</a></li>
-<li><a href="#">Клиенты</a></li>
-<li><a href="catalog.html">Магазин</a></li>
-<li><a href="#">Контакты</a></li>
-  </ul>
-<a href="#">Корзина</a>
-</nav>
-<h1>Дизайн-студия Нёрдс</h1>
-<h2>Преимущества</h2>
-<h1>Долго, Дорого, Скурпулезно.</h1>
-<p>Математически выверенный дизайн <br>
-  для вашего сайта или мобильного приложения.</p>
- <a href="#">Узнать больше</a>
- <p><img src="https://via.placeholder.com/150x100" alt=""></p>
- </header>
- <main> 
-   <h2>Услуги</h2>
-<section>
-  <p>
-    <img src="https://via.placeholder.com/150x100" alt="">
-</p>
-  <h2>Веб-сайты</h2>
- <p>Мир никогда не будет прежним<br>
-  после того как увидит ваш сайт!</p>
-    <a href="#">Заказать</a>
-</section>
-<section>
-  <p>
-    <img src="https://via.placeholder.com/150x100" alt="">
-</p>
-  <h2>Приложения</h2>
- <p>Покорите топ-10 приложений<br>
-  в AppStore и Google Play</p>
-  <a href="#">Заказать</a>
-</section>
-<section>
-  <p>
-    <img src="https://via.placeholder.com/150x100" alt="">
-</p>
-  <h2>Презентации</h2>
- <p>
-  Вы даже не подозреваете,<br>
-  насколько вы изумительны!</p>
-  <a href="#">Заказать</a>
-</section>
-  <section>
-    <h2>Мы — маленькая, но гордая <br>
-      дизайн-студия из Краснодара.</h2>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
-        превыше креатива. Работаем не покладая рук, как роботы.</p>
-<h3>
-  Выполняем заказы на разработку:
-</h3>
-<ul>
-  <li>Веб-сайтов любой сложности</li>
-  <li>Мобильных приложений для IOS и Android</li>
-  <li>Слайдшоу и видео для корпоративных презентаций</li>
-</ul>  
-  </section>
-  <section>
-    <figure>
-      <img src="https://via.placeholder.com/150x100" alt="">
-      <figcaption>с 2004 года Любим точность во всем:</figcaption>
-    </figure>
-    <ul>
-      <li>146<sup>%</sup>
-       <p>Уровень <br>
-        самоотдачи</p>
-      </li>
-        <li>100<sup>%</sup>
-        <p>Соблюдение <br>
-          сроков</p></li>
-      <li>50<sup>%</sup>
-     <p>Минимальная<br>
-        предоплата</p>
-      </li>
-    </ul>
-  </section>
-  <section>
-  <h2>Клиенты</h2>
-  <ul>
-   <li> 
-  <a href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="https://via.placeholder.com/150x100" alt="">
-  </a>
-   </li>
-   <li>
-    <a href="#">
-       <img src="https://via.placeholder.com/150x100" alt="">
-      </a>  
-   </li>
-   <li>
-      <a href="#">
+    <header> 
+      <nav>
         <img src="https://via.placeholder.com/150x100" alt="">
-      </a>
-   </li>
-   <li> 
-      <a href="#">
-        <img src="https://via.placeholder.com/150x100" alt="">
-      </a>
-    </li> 
-    </ul>
-    </section>
-  </main>
-<footer>
-  <section>
-    <h2>Контакты</h2>
-      <img src="https://via.placeholder.com/150x100" alt="">
-      <h2>nёrds design studio</h2>
+        <ul>
+          <li>
+            <a href="#">Студия</a>
+          </li>
+
+          <li>
+            <a href="#">Клиенты</a>
+          </li>
+
+          <li>
+            <a href="catalog.html">Магазин</a>
+          </li>
+
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        <a href="#">Корзина</a>        
+      </nav>
+      <h1>Долго, Дорого, Скурпулезно.</h1>
       <p>
-        наб. Реки Карповки, <br>
-        5 лит П, Санкт-Петербург
-        <br><br>
-        <a href="tel:+7800555-86-28">+7 800 555-86-28</a>
+        Математически выверенный дизайн <br>
+        для вашего сайта или мобильного приложения.
       </p>
-      <a href="#">Напишите нам</a><br>
+        <a href="#">Узнать больше</a>
+    </header>
+    <main> 
+      <h2>Услуги</h2>
+      <section>
+        <p>
+          <img src="https://via.placeholder.com/150x100" alt="">
+        </p>
+        <h2>Веб-сайты</h2>
+        <p>
+          Мир никогда не будет прежним<br>
+          после того как увидит ваш сайт!
+        </p>
+          <a href="#">Заказать</a>
+      </section>
+      <section>
+        <p>
+          <img src="https://via.placeholder.com/150x100" alt="">
+        </p>
+        <h2>Приложения</h2>
+        <p>
+          Покорите топ-10 приложений<br>
+          в AppStore и Google Play
+        </p>
+          <a href="#">Заказать</a>
+      </section>
+      <section>
+        <p>
+          <img src="https://via.placeholder.com/150x100" alt="">
+          </p>
+          <h2>Презентации</h2>
+          <p>
+            Вы даже не подозреваете,<br>
+            насколько вы изумительны!
+          </p>
+          <a href="#">Заказать</a>
+      </section>
+      <section>
+        <h2>Мы — маленькая, но гордая <br>
+          дизайн-студия из Краснодара.</h2>
+          <p>
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+            превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
+            <h3>Выполняем заказы на разработку:</h3>
+            <ul>
+              <li>
+                Веб-сайтов любой сложности
+              </li>
+
+              <li>
+                Мобильных приложений для IOS и Android
+              </li>
+
+              <li>
+                Слайдшоу и видео для корпоративных презентаций
+              </li>
+            </ul>  
+      </section>
+      <section>
+        <figure>
+          <img src="https://via.placeholder.com/150x100" alt="">
+          <figcaption>с 2004 года Любим точность во всем:</figcaption>
+        </figure>
+        <ul>
+          <li>
+            146<sup>%</sup>
+            <p>
+              Уровень<br>
+              самоотдачи
+            </p>
+          </li>
+
+          <li>
+            100<sup>%</sup>
+            <p>
+              Соблюдение<br>
+              сроков
+            </p>
+          </li>
+
+          <li>
+            50<sup>%</sup>
+            <p>
+              Минимальная<br>
+              предоплата
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Клиенты</h2>
+        <ul>
+          <li> 
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </a>  
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </a>
+          </li>
+
+          <li> 
+            <a href="#">
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </a>
+          </li> 
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Контакты</h2>
+        <img src="https://via.placeholder.com/150x100" alt="">
         <img src="https://via.placeholder.com/150x100" alt=""> 
-    </section>
-  <section>
-    <ul>
-      <li>
-        <a href="#">Вконтакте</a>
-      </li>
-      <li>
-        <a href="#">Фейсбук</a>
-      </li>
-      <li>
-        <a href="#">Инстаграм</a>
-      </li>
-    </ul>
-  </section>
-  <section>
-  <h3>
-    Давайте дружить, это выгодно!
-  </h3>
-  <p>Скидка 10% для друзей из социальных сетей.</p>
-</section>
-</footer>
+        <p>
+          nёrds design studio
+        </p>
+        <p>
+          наб. Реки Карповки,<br>
+          5 лит П, Санкт-Петербург
+        </p>
+        <p>
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
+        </p>
+        <a href="#">Напишите нам</a>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Давайте дружить, это выгодно!</h2>
+        <p>
+          Скидка 10% для друзей из социальных сетей.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
