Добавил графику и фавикон

--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог: Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html"><img src="https://via.placeholder.com/150x100" alt=""></a>
+        <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -130,7 +131,10 @@
               <a href="#">9 900 ₽</a>
             </p>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_black.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-sedona.jpg" width="358" height="578" alt="главная страница сайта Sedona, c фоновым рисунком гор">
             </p>
           </li>
 
@@ -144,28 +148,40 @@
               <a href="#">9 900 ₽</a>
             </p>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-pink.jpg" width="358" height="578" alt="главная страница сайта Pink, с фоновым рисунком смартфона в руке">
             </p>
           </li>
 
           <li>
             <a href="#">Барбершоп"Бородинский"</a>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-barbershop.jpg" width="358" height="578" alt="страница сайта Барбершопа Borodinski c преимуществами и выгодами для клиентов">
             </p>
           </li>
 
           <li>
             <a href="#">Mishka</a>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-mishka.jpg" width="358" height="578" alt="главная страница сайта Mishka с картинками вязаных изделий">
             </p>
           </li>
 
           <li>
             <a href="#">Aplus</a>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-aplus.jpg" width="358" height="578" alt="главная страница сайта Aplus с преимуществами и выгодами для клиентов">
             </p>
           </li>
           <li>
@@ -178,7 +194,10 @@
               <a href="#">9 900 ₽</a>
             </p>
             <p>
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
+            </p>
+            <p>
+              <img src="img/img-kvast.jpg" width="358" height="578" alt="страница сайта Кваст с каталогом товаров">
             </p>
           </li>
         </ul>
@@ -206,8 +225,8 @@
     <footer>
       <section>
         <h2>Контакты</h2>
-        <img src="https://via.placeholder.com/150x100" alt="">
-        <img src="https://via.placeholder.com/150x100" alt="">
+        <img src="img/map.png" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
+        <img src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс">
         <p>
           nёrds design studio
         </p>
