--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header> 
       <nav>
-        <img src="https://via.placeholder.com/150x100" alt="">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -37,7 +38,7 @@
       <h2>Услуги</h2>
       <section>
         <p>
-          <img src="https://via.placeholder.com/150x100" alt="">
+          <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
         </p>
         <h2>Веб-сайты</h2>
         <p>
@@ -47,7 +48,7 @@
       </section>
       <section>
         <p>
-          <img src="https://via.placeholder.com/150x100" alt="">
+          <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
         </p>
         <h2>Приложения</h2>
         <p>
@@ -57,7 +58,7 @@
       </section>
       <section>
         <p>
-          <img src="https://via.placeholder.com/150x100" alt="">
+          <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
         </p>
         <h2>Презентации</h2>
         <p>
@@ -87,7 +88,7 @@
       </section>
       <section>
         <figure>
-          <img src="https://via.placeholder.com/150x100" alt="">
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
           <figcaption>с 2004 года Любим точность во всем:</figcaption>
         </figure>
         <ul>
@@ -118,25 +119,25 @@
         <ul>
           <li> 
             <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/logo_borodinski.svg" width="209" height="90" alt="логотип borodinski">
             </a>  
           </li>
 
           <li>
             <a href="#">
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/logo_pink.svg" width="185" height="52" alt="логотип pink">
             </a>
           </li>
 
           <li> 
             <a href="#">
-              <img src="https://via.placeholder.com/150x100" alt="">
+              <img src="img/logo_mishka.svg" width="173" height="84" alt="логотип mishka">
             </a>
           </li> 
         </ul>
@@ -145,8 +146,8 @@
     <footer>
       <section>
         <h2>Контакты</h2>
-        <img src="https://via.placeholder.com/150x100" alt="">
-        <img src="https://via.placeholder.com/150x100" alt=""> 
+        <img src="img/map.png" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
+        <img src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс"> 
         <p>
           nёrds design studio
         </p>
