Удалил лишние изображения, добавил фавиконки и подключил манифест

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/favicon.ico">
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header> 
       <nav>
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
+        <img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -119,25 +122,25 @@
         <ul>
           <li> 
             <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
+              <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="img/logo_borodinski.svg" width="209" height="90" alt="логотип borodinski">
+              <img src="img/logos/logo_borodinski.png" width="209" height="90" alt="логотип borodinski">
             </a>  
           </li>
 
           <li>
             <a href="#">
-              <img src="img/logo_pink.svg" width="185" height="52" alt="логотип pink">
+              <img src="img/logos/logo_pink.png" width="185" height="52" alt="логотип pink">
             </a>
           </li>
 
           <li> 
             <a href="#">
-              <img src="img/logo_mishka.svg" width="173" height="84" alt="логотип mishka">
+              <img src="img/logos/logo_mishka.png" width="173" height="84" alt="логотип mishka">
             </a>
           </li> 
         </ul>
