--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог: Нёрдс</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/favicon.ico">
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
+        <a href="index.html"><img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -131,9 +134,6 @@
               <a href="#">9 900 ₽</a>
             </p>
             <p>
-              <img src="img/browser_black.jpg" width="360" height="40" alt="верхняя панель браузера">
-            </p>
-            <p>
               <img src="img/img-sedona.jpg" width="358" height="578" alt="главная страница сайта Sedona, c фоновым рисунком гор">
             </p>
           </li>
@@ -148,18 +148,12 @@
               <a href="#">9 900 ₽</a>
             </p>
             <p>
-              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
-            </p>
-            <p>
               <img src="img/img-pink.jpg" width="358" height="578" alt="главная страница сайта Pink, с фоновым рисунком смартфона в руке">
             </p>
           </li>
 
           <li>
             <a href="#">Барбершоп"Бородинский"</a>
-            <p>
-              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
-            </p>
             <p>
               <img src="img/img-barbershop.jpg" width="358" height="578" alt="страница сайта Барбершопа Borodinski c преимуществами и выгодами для клиентов">
             </p>
@@ -168,18 +162,12 @@
           <li>
             <a href="#">Mishka</a>
             <p>
-              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
-            </p>
-            <p>
               <img src="img/img-mishka.jpg" width="358" height="578" alt="главная страница сайта Mishka с картинками вязаных изделий">
             </p>
           </li>
 
           <li>
             <a href="#">Aplus</a>
-            <p>
-              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
-            </p>
             <p>
               <img src="img/img-aplus.jpg" width="358" height="578" alt="главная страница сайта Aplus с преимуществами и выгодами для клиентов">
             </p>
@@ -192,9 +180,6 @@
             </p>
             <p>
               <a href="#">9 900 ₽</a>
-            </p>
-            <p>
-              <img src="img/browser_light.jpg" width="360" height="40" alt="верхняя панель браузера">
             </p>
             <p>
               <img src="img/img-kvast.jpg" width="358" height="578" alt="страница сайта Кваст с каталогом товаров">
