Добавил стилизацию главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог: Нёрдс</title>
+    <link href="normalize.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel="icon" href="img/favicons/favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/180.png">
@@ -11,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"><img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
+        <a class="main-header-logo" href="index.html"><img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
         <ul>
           <li>
             <a href="#">Студия</a>
