--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="img/favicons/favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body>
-    <header> 
-      <nav>
+  <body class="page-body">
+    <header class="main-header"> 
+      <nav class="main-navigation">
         <img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
-        <ul>
+        <ul class="site-navigation">
           <li>
             <a href="#">Студия</a>
           </li>
@@ -29,17 +31,17 @@
             <a href="#">Контакты</a>
           </li>
         </ul>
-        <a href="#">Корзина</a>        
+        <a class="basket-link" href="#">Корзина</a>        
       </nav>
-      <h1>Долго, Дорого, Скурпулезно.</h1>
+      <h1>Долго, дорого,<br>скрупулезно.</h1>
       <p>
         Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
       </p>
-      <a href="#">Узнать больше</a>
+      <a class="button" href="#">Узнать больше</a>
     </header>
-    <main> 
+    <main class="container"> 
       <h2>Услуги</h2>
-      <section>
+      <section class="service-one">
         <p>
           <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
         </p>
@@ -47,9 +49,9 @@
         <p>
           Мир никогда не будет прежним<br>после того как увидит ваш сайт!
         </p>
-        <a href="#">Заказать</a>
+        <a class="button" href="#">Заказать</a>
       </section>
-      <section>
+      <section class="service-two">
         <p>
           <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
         </p>
@@ -57,9 +59,9 @@
         <p>
           Покорите топ-10 приложений<br>в AppStore и Google Play
         </p>
-        <a href="#">Заказать</a>
+        <a class="button" href="#">Заказать</a>
       </section>
-      <section>
+      <section class="service-three">
         <p>
           <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
         </p>
@@ -67,16 +69,16 @@
         <p>
           Вы даже не подозреваете,<br>насколько вы изумительны!
         </p>
-        <a href="#">Заказать</a>
+        <a class="button" href="#">Заказать</a>
       </section>
-      <section>
+      <section class="info">
         <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
         <p>
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.
         </p>
         <h3>Выполняем заказы на разработку:</h3>
-        <ul>
-          <li>
+        <ul class="info-list">
+          <li class="info-item">
             Веб-сайтов любой сложности
           </li>
 
@@ -89,38 +91,38 @@
           </li>
         </ul>  
       </section>
-      <section>
+      <section class="features">
         <figure>
           <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
           <figcaption>с 2004 года Любим точность во всем:</figcaption>
         </figure>
-        <ul>
-          <li>
-            146<sup>%</sup>
-            <p>
+        <ul class="features-list">
+          <li class="features-item">
+            146<sup class="symbol">%</sup>
+            <p class="description">
               Уровень<br>самоотдачи
             </p>
           </li>
 
-          <li>
-            100<sup>%</sup>
-            <p>
+          <li class="features-item">
+            100<sup class="symbol">%</sup>
+            <p class="description">
               Соблюдение<br>сроков
             </p>
           </li>
 
-          <li>
-            50<sup>%</sup>
-            <p>
+          <li class="features-item">
+            50<sup class="symbol">%</sup>
+            <p class="description">
               Минимальная<br>предоплата
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="clients">
         <h2>Клиенты</h2>
-        <ul>
-          <li> 
+        <ul class="clients-list">
+          <li class="clients-items"> 
             <a href="https://htmlacademy.ru/intensive/htmlcss">
               <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
             </a>
@@ -146,43 +148,62 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <section>
+    <footer class="main-footer">
+      <section class="contacts">
         <h2>Контакты</h2>
         <img src="img/map.png" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
         <img src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс"> 
-        <p>
+        <p class="naming">
           nёrds design studio
         </p>
         <p>
           наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
         </p>
         <p>
-          <a href="tel:+78005558628">+7 800 555-86-28</a>
+          <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </p>
-        <a href="#">Напишите нам</a>
+        <a class="button" href="#">Напишите нам</a>
       </section>
-      <section>
+      <section class="footer-social">
         <ul>
           <li>
-            <a href="#">Вконтакте</a>
+            <a class="social-button" href="#">Вконтакте</a>
           </li>
 
           <li>
-            <a href="#">Фейсбук</a>
+            <a class="social-button" href="#">Фейсбук</a>
           </li>
 
           <li>
-            <a href="#">Инстаграм</a>
+            <a class="social-button" href="#">Инстаграм</a>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="profitable">
         <h2>Давайте дружить, это выгодно!</h2>
         <p>
           Скидка 10% для друзей из социальных сетей.
         </p>
       </section>
     </footer>
+    <section class="modal">
+      <h2>Напишите нам</h2>
+      <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="modal-item">
+          <label for="modal-name">Ваше имя:</label>
+          <input id="modal-name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p class="modal-item">
+          <label for="modal-email">Ваш email:</label>
+          <input id="modal-email" type="email" name="mail" placeholder="email@example.com">
+        </p>
+        <p class="modal-item">
+          <label for="modal-text">Текст письма:</label>
+          <input id="modal-text" type="text" name="text" placeholder="В свободной форме">
+        </p>
+        <button class="button" type="submit">Отправить</button> 
+      </form>
+      <button class="modal-close" type="button">Закрыть</button>  
+    </section>
   </body>
 </html>
