Исправил ошибки в CSS, добавил изменения в стилизации

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="main-header"> 
       <nav class="main-navigation">
         <img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
-        <ul class="site-navigation">
+        <ul class="site-navigation clear-list">
           <li>
             <a href="#">Студия</a>
           </li>
@@ -31,13 +31,13 @@
             <a href="#">Контакты</a>
           </li>
         </ul>
-        <a class="basket-link" href="#">Корзина</a>        
+        <a class="basket-link clear-list" href="#">Корзина</a>        
       </nav>
       <h1>Долго, дорого,<br>скрупулезно.</h1>
       <p>
         Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
       </p>
-      <a class="button" href="#">Узнать больше</a>
+      <a class="button button-general" href="#">Узнать больше</a>
     </header>
     <main class="container"> 
       <h2>Услуги</h2>
@@ -45,31 +45,31 @@
         <p>
           <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
         </p>
-        <h2>Веб-сайты</h2>
+        <h2 class="general">Веб-сайты</h2>
         <p>
           Мир никогда не будет прежним<br>после того как увидит ваш сайт!
         </p>
-        <a class="button" href="#">Заказать</a>
+        <a class="button-red button-general" href="#">Заказать</a>
       </section>
       <section class="service-two">
         <p>
           <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
         </p>
-        <h2>Приложения</h2>
+        <h2 class="general">Приложения</h2>
         <p>
           Покорите топ-10 приложений<br>в AppStore и Google Play
         </p>
-        <a class="button" href="#">Заказать</a>
+        <a class="button-green" href="#">Заказать</a>
       </section>
       <section class="service-three">
         <p>
           <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
         </p>
-        <h2>Презентации</h2>
+        <h2 class="general">Презентации</h2>
         <p>
           Вы даже не подозреваете,<br>насколько вы изумительны!
         </p>
-        <a class="button" href="#">Заказать</a>
+        <a class="button-yellow" href="#">Заказать</a>
       </section>
       <section class="info">
         <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
@@ -96,7 +96,7 @@
           <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
           <figcaption>с 2004 года Любим точность во всем:</figcaption>
         </figure>
-        <ul class="features-list">
+        <ul class="features-list clear-list">
           <li class="features-item">
             146<sup class="symbol">%</sup>
             <p class="description">
@@ -121,7 +121,7 @@
       </section>
       <section class="clients">
         <h2>Клиенты</h2>
-        <ul class="clients-list">
+        <ul class="clients-list clear-list">
           <li class="clients-items"> 
             <a href="https://htmlacademy.ru/intensive/htmlcss">
               <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
@@ -162,10 +162,10 @@
         <p>
           <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </p>
-        <a class="button" href="#">Напишите нам</a>
+        <a class="button button-general" href="#">Напишите нам</a>
       </section>
       <section class="footer-social">
-        <ul>
+        <ul class="clear-list">
           <li>
             <a class="social-button" href="#">Вконтакте</a>
           </li>
@@ -201,7 +201,7 @@
           <label for="modal-text">Текст письма:</label>
           <input id="modal-text" type="text" name="text" placeholder="В свободной форме">
         </p>
-        <button class="button" type="submit">Отправить</button> 
+        <button class="button button-general" type="submit">Отправить</button> 
       </form>
       <button class="modal-close" type="button">Закрыть</button>  
     </section>
