Исправил грид для товаров

--- a/catalog.html
+++ b/catalog.html
@@ -132,7 +132,7 @@
             </section>
             <section class="products">
               <h2>Товары:</h2>  
-              <ul class="clear-list">
+              <ul class="clear-list block-products">
                 <li>
                   <h3><a class="naming" href="#">Sedona</a></h3>
                   <p class="description text">
